--- a/assets/main.css
+++ b/assets/main.css
@@ -160,6 +160,7 @@ td {
     border-top: 1px solid green;
     background-color: black;
     color: rgba(255,255,255,0.7);
+    width: 100%;
 }
 
 
@@ -179,4 +180,13 @@ input {
 
 #ghost-nation{
     line-height: 110%;
+    font-size: 10px;
+}
+
+pre {
+    white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+    white-space: -pre-wrap; /* Opera */
+    white-space: -o-pre-wrap; /* Opera */
+    white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+    word-wrap: break-word; /* IE 5.5+ */
 }
