--- a/assets/main.css
+++ b/assets/main.css
@@ -193,3 +193,15 @@ pre {
 }
 
 /* file transfer */
+input[type="file"] {
+    display: none;
+}
+.file-input {
+    border: 1px solid green;
+    color: green;
+    height: 30px;
+    border-radius: 5px;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
