--- a/assets/main.css
+++ b/assets/main.css
@@ -122,11 +122,14 @@ td {
     margin: 1%;
     border-radius: 7px;
     padding-top: 3%;
-    border: 1px solid green;
+    background-color: rgba(255,255,255,0.05);
+    color: green;
 }
 
 #initiate-con, #connect{
     width: 80%;
+    border: 1px solid darkgreen;
+    color: darkgreen;
 }
 
 #copy-your-id {
@@ -138,15 +141,16 @@ td {
 #otherId, #yourId{
     width: 80%;
     height: 30px;
-    border: 1px solid green;
+    border: 1px solid black;
     background-color: black;
+    border-radius: 6px;
 }
 
 #yourMsg{
     width: 100%;
     height: 44px;
     background-color: black;
-    border: 1px solid green;
+    border: 1px solid rgba(255,255,255,0.5);
 }
 
 #send{
